--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^7.0.5",
     "awesome-typescript-loader": "^3.0.4-rc.2",
-    "get-stdin": "^5.0.1",
-    "process": "^0.11.9",
-    "readline": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.0",
     "tsc": "^1.20150623.0",
