--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.4-rc.2",
     "copy-webpack-plugin": "^4.0.1",
+    "keyboardevent-key-polyfill": "^1.0.2",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.0",
     "tsc": "^1.20150623.0",
