--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "text-adventure",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A text-based game engine.",
   "main": "index.js",
   "scripts": {
     "prepublish": "typings install",
