--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "text-adventure",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A text-based game engine.",
   "main": "index.js",
   "scripts": {
     "prepublish": "typings install",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --hot --inline --no-info --content-base ./build"
+    "start": "webpack-dev-server --hot --inline --no-info --content-base ./build",
+    "sync": "bash bin/sync.sh"
   },
   "keywords": [],
   "author": "",
