--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepublish": "typings install",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --hot --inline --no-info --content-base ./build",
+    "php": "php -S localhost:8000 -t build/",
     "sync": "bash bin/sync.sh"
   },
   "keywords": [],
