Add tests for DummParser

--- a/package.json
+++ b/package.json
@@ -2,23 +2,30 @@
   "name": "text-adventure",
   "version": "0.3.0",
   "description": "A text-based game engine.",
+  "repository": "https://github.com/gcarvelli/text-adventure",
   "main": "index.js",
   "scripts": {
     "prepublish": "typings install",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --inline --no-info --port 8000 --content-base ./build",
     "php": "php -S localhost:8000 -t build/",
+    "test": "mocha -r ts-node/register test/**/*Test.ts",
     "sync": "bash bin/sync.sh"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/mocha": "^2.2.39",
     "awesome-typescript-loader": "^3.0.4-rc.2",
+    "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "keyboardevent-key-polyfill": "^1.0.2",
+    "mocha": "^3.2.0",
     "source-map-loader": "^0.1.6",
     "ts-loader": "^2.0.0",
+    "ts-node": "^2.1.0",
     "tsc": "^1.20150623.0",
     "typescript": "^2.2.0",
     "typings": "^2.1.0",
