--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "typescript": "^2.2.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "linebyline": "^1.3.0"
   }
 }
