Add resync command

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cli": "node build/js/cli.js",
     "php": "php -S localhost:8000 -t build/",
     "test": "node_modules/.bin/mocha --compilers ts:ts-node/register test/**/*Test.ts",
-    "sync": "bash bin/sync.sh"
+    "sync": "bash bin/sync.sh",
+    "resync": "bash bin/resync.sh"
   },
   "keywords": [],
   "author": "",
