--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.42",
-    "awesome-typescript-loader": "^3.0.4-rc.2",
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^2.2.48",
+    "awesome-typescript-loader": "^3.5.0",
     "chai": "^4.1.2",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
     "keyboardevent-key-polyfill": "^1.0.2",
-    "mocha": "^3.5.0",
+    "mocha": "^3.5.3",
     "source-map-loader": "^0.1.6",
-    "ts-loader": "^2.0.0",
+    "ts-loader": "^2.3.7",
     "ts-node": "^3.3.0",
-    "typescript": "^2.2.0",
+    "typescript": "^2.9.2",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
     "linebyline": "^1.3.0"
