--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^2.11.3"
   },
   "dependencies": {
-    "linebyline": "^1.3.0"
+    "linebyline": "^1.3.0",
+    "xterm": "^3.11.0"
   }
 }
